<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/sideNavbarGroupMain">

        <item android:id="@+id/sideNavbarHome"
            android:title="@string/side_navbar_home_title"
            android:icon="@drawable/home_icon"
            android:checked="true"/>

        <item android:id="@+id/sideNavbarCatalog"
            android:title="@string/side_navbar_catalog_title"
            android:icon="@drawable/catalog_icon"
            />

        <item android:id="@+id/sideNavbarCart"
            android:title="@string/side_navbar_cart_title"
            android:icon="@drawable/cart_icon"
            android:visible="false"/>

        <item android:id="@+id/sideNavbarFavorites"
            android:title="@string/side_navbar_favorites_title"
            android:icon="@drawable/favorite_icon"
            android:visible="false"/>

        <item android:id="@+id/sideNavbarAccount"
            android:title="@string/side_navbar_account_title"
            android:icon="@drawable/account_icon"
            android:visible="false"/>
    </group>

    <group android:id="@+id/sideNavbarAuth">
        <item android:id="@+id/sideNavbarLogin"
            android:title="@string/side_navbar_login_title"
            android:icon="@drawable/baseline_login_24"/>

        <item android:id="@+id/sideNavbarLogout"
            android:title="@string/side_navbar_logout_title"
            android:icon="@drawable/baseline_logout_24"
            android:visible="false"/>
    </group>

</menu>