<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/aot" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/product_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/product_view_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Color:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:id="@+id/color_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/white_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="White" />

            <RadioButton
                android:id="@+id/black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Black" />
        </RadioGroup>

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Size:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sizeSButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s"
                android:layout_margin="8dp"
                android:backgroundTint="@drawable/button_highlight"
                />

            <Button
                android:id="@+id/sizeMButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"
                android:layout_margin="8dp"
                android:backgroundTint="@drawable/button_highlight"
                />

            <Button
                android:id="@+id/sizeLButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L"
                android:layout_margin="8dp"
                android:backgroundTint="@drawable/button_highlight"
                />

            <Button
                android:id="@+id/sizeXLButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XL"
                android:layout_margin="8dp"
                android:backgroundTint="@drawable/button_highlight"
                />

            <Button
                android:id="@+id/sizeXXLButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXL"
                android:layout_margin="8dp"
                android:backgroundTint="@drawable/button_highlight"
                />

            <Button
                android:id="@+id/sizeXXXLButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXXL"
                android:layout_margin="8dp"
                android:backgroundTint="@drawable/button_highlight"
                />

            <!-- Add more buttons or change the text as needed -->

        </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Decrease button -->
            <Button
                android:id="@+id/decreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:onClick="decreaseCount" />

            <!-- Count display -->
            <TextView
                android:id="@+id/countTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <!-- Increase button -->
            <Button
                android:id="@+id/increaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:onClick="increaseCount" />


            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:backgroundTint="@color/black"
                android:drawableLeft="@drawable/baseline_add_shopping_cart_24"
                android:paddingHorizontal="30dp"
                android:paddingVertical="5dp"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="10dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/product_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/product_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/product_description_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Customer reviews:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <!-- Add customer reviews here -->

        <TextView
            android:id="@+id/similar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Similar products:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    </LinearLayout>

</ScrollView>
